umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@covalent_ccl3+.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: covalent
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{C+v3}"
      - "{Cl/3v1}"
      - "{Cl/3v1}"
      - "{Cl/3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{C+v3}"
      - "{Cl/3v1}"
      - "{Cl/3v1}"
      - "{Cl/3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
